Eclipse 4.18 (M3) JDT Patch for Groovy-Eclipse: JDT commit d11a339
#1161 #1162 #1196